feat: Cambios importantes

--- a/Api-Agendate-App/appsettings.json
+++ b/Api-Agendate-App/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "ConnectionStrings": {
-    "masterconnection": "Data Source= ;Initial Catalog= ;Integrated Security=false ;User= ;Password=; MultipleActiveResultSets=true"
-  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BdConnectionString": "Server=KHULTHU\\KHULTHU;Database=AgendateApp;Trusted_Connection=True;;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  }
 }
