fix: Desvincula modelos y agrega comentario

--- a/Logic/Logic/Logic.csproj
+++ b/Logic/Logic/Logic.csproj
@@ -15,4 +15,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="BaseDeDatos\" />
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
