chore: Modifica referencias de proyecto.

--- a/Api-Agendate-App/Api-Agendate-App.csproj
+++ b/Api-Agendate-App/Api-Agendate-App.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Logic\Logic\Logic.csproj" />
+    <ProjectReference Include="..\Repositorio\Repositorio.csproj" />
   </ItemGroup>
 
 </Project>
