chore: Cambios en dependencias

--- a/Repositorio/Repositorio.csproj
+++ b/Repositorio/Repositorio.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Logic\Logic\Logic.csproj" />
+    <ProjectReference Include="..\Api-Agendate-App\Api-Agendate-App.csproj" />
   </ItemGroup>
 
 </Project>
