--- a/Api-Agendate-App/appsettings.json
+++ b/Api-Agendate-App/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BdConnectionString": "Server=(local);Database=AgendateApp;Trusted_Connection=True;;TrustServerCertificate=true;MultipleActiveResultSets=true"
-  }
+  },
+   "settings": {
+      "secretKey":  "=CodigoApiAgendateApp1="
+    }
+
+
+  
 }
