--- a/.gitignore
+++ b/.gitignore
@@ -362,4 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-appsettings.json
+C:\Users\Khutlu\source\repos\SendingFruits\Api-Agendate-App/appsettings.json
