--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 
 Api-Agendate-App/appsettings.json
+/Api-Agendate-App/appsettings.json
+/Api-Agendate-App/Constantes/MappingConfig.cs
