Agrega guit ignore

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 Api-Agendate-App/appsettings.json
 /Api-Agendate-App/appsettings.json
 /Api-Agendate-App/Constantes/MappingConfig.cs
+/Api-Agendate-App/appsettings.json
