Correciones (Controlador de clientes, gitignore) y initDataInsert.sql

--- a/Api-Agendate-App/appsettings.json
+++ b/Api-Agendate-App/appsettings.json
@@ -1,5 +1,4 @@
 {
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,12 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BdConnectionString": "Server=(local);Database=AgendateApp;Trusted_Connection=True;;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    "BdConnectionString": "Server=DESKTOP-ESPIAL;Database=AgendateApp;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
   },
    "settings": {
       "secretKey":  "=CodigoApiAgendateApp1="
     }
-
-
-  
 }
