--- a/Api-Agendate-App/appsettings.json
+++ b/Api-Agendate-App/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BdConnectionString": "Server=KHULTHU\\KHULTHU;Database=AgendateApp;Trusted_Connection=True;;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    "BdConnectionString": "Server=(local);Database=AgendateApp;Trusted_Connection=True;;TrustServerCertificate=true;MultipleActiveResultSets=true"
   },
   "settings": {
     "secretKey": "=CodigoApiAgendateApp1="
