arreglo union usuario

--- a/Api-Agendate-App/appsettings.json
+++ b/Api-Agendate-App/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"BdConnectionString": "Server=(local);Database=AgendateApp;Trusted_Connection=True;;TrustServerCertificate=true;MultipleActiveResultSets=true"
-    "BdConnectionString": "Server=(local);Database=AgendateApp;User ID=sa; Password=sa;MultipleActiveResultSets=true;Encrypt=False"
+    "BdConnectionString": "Server=(local);Database=AgendateApp;Trusted_Connection=True;;TrustServerCertificate=true;MultipleActiveResultSets=true"
+   // "BdConnectionString": "Server=(local);Database=AgendateApp;User ID=sa; Password=sa;MultipleActiveResultSets=true;Encrypt=False"
   },
   "settings": {
     "secretKey": "=CodigoApiAgendateApp1="
