feat: Ejecuta script de pruebas automaticamente, agrega telefono de empresa a reservaDTOCliente y ingresa las primera migrations de base

--- a/Logic/Logic/Logic.csproj
+++ b/Logic/Logic/Logic.csproj
@@ -19,4 +19,10 @@
     <Folder Include="BaseDeDatos\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Datos de Prueba\Script-DatosPrueba.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
