feat: Implementa Serilog para tener una base de los logs mas importantes en el sistema.

--- a/Api-Agendate-App/Api-Agendate-App.csproj
+++ b/Api-Agendate-App/Api-Agendate-App.csproj
@@ -25,6 +25,8 @@
     </PackageReference>
     <PackageReference Include="MimeKit" Version="4.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
   </ItemGroup>
